# Attune

./: .gitignore  .prettierignore  .prettierrc  Makefile  README.md  biome.json  components.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json
.husky/: pre-commit
service/wpx/: main.py  pyproject.toml
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  Makefile  info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20250512062900_create_user.sql  20250515055657_create_audio.sql  20250603141815_create_dictation.sql  20250713032035_create_dictation.sql  20250713032100_create_bookmark_dictation_view.sql
src-tauri/sidecar/whisper/: .gitignore  Makefile  main.py  pyproject.toml  whip_v2-aarch64-apple-darwin.spec  whip_v2-x86_64-unknown-linux-gnu.spec
src-tauri/src/: commands.rs  config.rs  db.rs  lib.rs  main.rs  model.rs  server.rs  ws.rs  yt.rs
src-tauri/src/query/: audio.rs  bookmark.rs  bookmark_dictation.rs  commands.rs  dictation.rs  mod.rs  oauth.rs  setting.rs  store.rs  user.rs
src-tauri/src/service/: wx.rs
src/data/: demo-srt.ts
src/lib/: audio.ts  constants.ts  file.ts  tauri.ts  utils.ts
src/lib/audio/: audioDeviceService.svelte.ts  audioListService.svelte.ts
src/lib/auth/: google-oauth.svelte.ts  oauth.ts
src/lib/components/: app-sidebar.svelte  audio-animate.svelte  nav-main.svelte  nav-projects.svelte  nav-user.svelte  sidebar-page.svelte  team-switcher.svelte  theme-switch.svelte  topic-switcher.svelte
src/routes/: +layout.svelte  +page.svelte
(+158 files in other folders)
