[package]
name = "owletc"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "owletc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
uuid = { version = "1.11.0", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
] }
tauri-plugin-shell = "2"
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "0.3"
futures-channel = "0.3"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio"] }
futures = "0.3.31"
tauri-plugin-deep-link = "2"
axum = "0.8.4"
tauri-plugin-oauth = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
